# k8s-cloudkms-plugin

./: .gitignore  .travis.yml  BUILD  CONTRIBUTING.md  Dockerfile  DockerfileTestCases  Makefile  OWNERS  README.md  WORKSPACE  bazel-bin  bazel-genfiles  bazel-k8s-cloudkms-plugin  bazel-out  bazel-testlogs  ca-certificates.crt  cloudbuild.yaml  debug.sh  encryption-config.yaml  encryption-provider-config.yaml  go.mod  go.sum  k8s-cloud-kms-plugin.go  k8s-cloudkms-plugin.go  k8s-kms-plugin.yaml  kube-apiserver.manifest  plugin.go  plugin_test.go
.ijwb/: .bazelproject
cmd/fakekms/: BUILD.bazel  main.go
cmd/fakekubeapi/: BUILD.bazel  main.go
cmd/k8s-cloudkms-plugin/: main.go
cmd/plugin/: BUILD.bazel  k8s-cloud-kms-plugin.go  main.go
cmd/tpmseal/: BUILD.bazel  main.go
cmd/tpmunseal/: BUILD.bazel  main.go
docker-tests/: structure-test.sh  structure-test.yaml
hack/: copy_to_master.sh  docker_run.sh  generate-kube-apiserver-manifest.sh  kms-plugin-container-template.json  kms-plugin-container-termplate.json  kube-apiserver-template.json  load_generator.sh
manifests/: encryption-provider-config.yaml  k8s-kms-plugin.yaml  kms-plugin-container-template.json  kube-apiserver-template.json  kube-apiserver.manifest
plugin/: BUILD.bazel  Makefile  config.go  healthz.go  healthz_test.go  http_client.go  http_client_test.go  metrics.go  orchestrator.go  plugin.go  plugin_test.go  service.pb.go  test_config.go  token_source.go  utils.go  validation.go
plugin/v1/: healthz.go  healthz_test.go  plugin.go  plugin_test.go  service.pb.go
plugin/v2/: healthz.go  healthz_test.go  plugin.go  plugin_test.go
tests/: config.go
testutils/: BUILD.bazel  download_from_gcs.sh  test_seal.sh  upload_to_gcs.sh
testutils/fakekms/: BUILD.bazel  fakekms.go
testutils/fakekubeapi/: BUILD.bazel  fakekubeapi.go
testutils/kmspluginclient/: BUILD.bazel  kmspluginclient.go
tpm/: BUILD.bazel  tpm.go
v1beta1/: service.pb.go  service.proto
