load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/k8s-cloudkms-plugin/cmd/fakekms",
    visibility = ["//visibility:private"],
    deps = [
        "//testutils/fakekms:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
    ],
)

go_binary(
    name = "fakekms",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
