load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build", "docker_push")

# TODO (immutableT) gazelle adds http:/ prefix to importpath which breaks builds.
go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/k8s-cloudkms-plugin/cmd/plugin",
    visibility = ["//visibility:public"],
    deps = [
        "//plugin:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/google.golang.org/api/cloudkms/v1:go_default_library",
    ],
)

go_binary(
    name = "k8s-cloud-kms-plugin",
    embed = [":go_default_library"],
    gc_linkopts = [
        "-linkmode",
        "external",
        "-extldflags",
        "-static",
    ],
    visibility = ["//visibility:public"],
)

go_image(
    name = "k8s-cloud-kms-plugin-image",
    binary = ":k8s-cloud-kms-plugin",
)

docker_build(
    name = "k8s-cloud-kms-plugin-docker",
    base = "@distroless_static//image",
    files = [
        ":k8s-cloud-kms-plugin-image",
    ],
    labels = {"maintainer": "Google <alextc@google.com>"},
)
