load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/k8s-cloudkms-plugin/cmd/tpmunseal",
    visibility = ["//visibility:private"],
    deps = [
        "//tpm:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
    ],
)

go_binary(
    name = "tpmunseal",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
