load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fakekms.go"],
    importpath = "https:/github.com/GoogleCloudPlatform/k8s-cloudkms-plugin/testutils/fakekms",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/google/go-cmp/cmp:go_default_library",
        "//vendor/github.com/phayes/freeport:go_default_library",
        "//vendor/google.golang.org/api/cloudkms/v1:go_default_library",
    ],
)
