load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fakekubeapi.go"],
    importpath = "github.com/GoogleCloudPlatform/k8s-cloudkms-plugin/testutils/fakekubeapi",
    visibility = ["//visibility:public"],
    deps = [
        "//plugin:go_default_library",
        "//testutils/kmspluginclient:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/google/go-cmp/cmp:go_default_library",
        "//vendor/github.com/phayes/freeport:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
    ],
)
